--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>🔒 秘密配对抽签 🔒</h1>
+      <h1>🔒 随机配对抽签 🔒</h1>
 
       <div class="input-section">
         <textarea id="nameInput" placeholder="请输入参与人员名单，每行一个人名"></textarea>
